Adjusted layout for readability on all components, applied color schemes where missing, repaired logic to show correct prices with items in ORderSummary, and confirmed EmailJs functionality

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,27 +1,10 @@
 .App {
-  width: 100%;
   margin: 0px;
-
+  padding: 0px;
   display: flex;
   flex-direction: column;
   gap: 0px;
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
