--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,7 +1,6 @@
 .header {
   height: 60px;
-  width: 90vw;
-  // background-color: rgba(35, 95, 35, 0.623);
+  width: 95vw;
   background-color: rgba(85, 132, 85, 0.75);
   margin-top: -10px;
   padding: 0px;
@@ -26,7 +25,7 @@
 
 @media (max-width: $breakpoint) {
   .header {
-    height: 70px;
+    height: 85px;
     background-color: rgba(85, 132, 85, 1);
     margin: -20px;
     padding: 17px 10px 10px 10px;
