--- a/src/styles/OrderSummary.scss
+++ b/src/styles/OrderSummary.scss
@@ -39,6 +39,10 @@
       font-size: 1.5rem;
       height: 40px;
       width: 90%;
+      background-color: $color-brown;
+      color: $light-background;
+      font-weight: bold;
+      border-radius: 50px;
     }
   }
 
@@ -112,7 +116,7 @@
     display: grid;
     grid-template-rows: [info-s] 250px [info-e] 10px [subtotal-s] 95px [subtotal-e] 40px [submit-s] 45px [submit-e] 10px [ items-s] 100px [items-e];
     grid-template-columns: [summary-s] 100%[summary-e];
-    height: 85vh;
+    height: 75vh;
     width: 80vw;
     background-color: $light-background;
     z-index: 5;
@@ -127,7 +131,7 @@
     }
 
     &__items {
-      height: 300px;
+      height: 225px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -148,7 +152,6 @@
         background-color: $color-brown;
         color: $light-background;
         font-weight: bold;
-
         font-size: 1.5rem;
         height: 40px;
         width: 90%;
