--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 body {
+  height: 100vh;
+  width: 100vw;
   position: fixed;
-  margin: 10px;
+  // margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
